--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>My page!</title>
-		<link rel="stylesheet" href="CVstyle.css"/>
+		<link rel="stylesheet" href="Cvstyle.css"/>
 	<head/>
 	<body>
 	<body>
