--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-md-6">
-					<img src="images/4.jpg" class="img-fluid" alt="Image Description">
+					<img src="images/4.jpg" class="img-fluid" alt="Life drawing I painted">
 				</div>
 				<div class="col-md-6">
 					<h2>About Me</h2>
