--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<div class="container my-background-class">
+		<div class="container my-background-class" alt="Photo of Me working">
 			<div class="text-center p-5">
 				<h1 class="centre">Anthony Hodder<h1>
 				<div><h3><a style="color:white"; href="#contact">Contact me</a><h3/></div>
